# aurcheck

./: Cargo.toml  LICENSE  README.md
src/: analyzer.rs  aur.rs  errors.rs  heuristics.rs  main.rs  output.rs  pkgbuild.rs  security.rs
