[package]
name = "aurcheck"
version = "0.1.0"
edition = "2021"
authors = ["AnmiTaliDev <anmitali198@gmail.com>"]
license = "Apache-2.0"
description = "Security scanner for AUR packages"
repository = "https://github.com/AnmiTaliDev/aurcheck"
readme = "README.md"
keywords = ["aur", "security", "arch", "package", "scanner"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
indicatif = "0.17"
url = "2.4"
base64 = "0.21"
sha2 = "0.10"
rustls = "0.21"
rustls-webpki = "0.101"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.0"